module4/hello-volumes.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-volumes
  labels:
    run: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    emptyDir: {}
